--- a/index.html
+++ b/index.html
@@ -10,56 +10,54 @@
   <body>
     <h1>Validación de datos</h1>
 
+
     <form action="" name="formulario" id="formulario" onsubmit="return false">
-      <table>
-        <tr>
-          <td>
-            <label for="dni" id="lbldni">DNI:</label>
-          </td>
-          <td>
-            <input
-              class="control"
-              type="number"
-              name="dni"
-              id="dni"
-              placeholder="DNI" />
-          </td>
-        </tr>
+      <fieldset>
+        <label for="dni" id="lbldni">
+          DNI:
+          <input
+            class="control"
+            type="number"
+            name="dni"
+            id="dni"
+            placeholder="DNI" />
+        </label>
 
-				<tr>
-					<td>
-						<label for="nombre">Nombre:</label>
-					</td>
-					<td>
-						<input class="control" type="text" name="nombre" id="nombre" maxlength="50" placeholder="Nombre">
-					</td>
-				</tr>
+        <label for="nombre">
+          Nombre:
+          <input
+            class="control"
+            type="text"
+            name="nombre"
+            id="nombre"
+            maxlength="50"
+            placeholder="Nombre" />
+        </label>
 
-				<tr>
-					<td>
-						<label for="apellido">Apellido:</label>
-					</td>
-					<td>
-						<input class="control" type="text" name="apellido" id="apellido" maxlength="150" placeholder="Apellido">
-					</td>
-				</tr>
+        <label for="apellido">
+          Apellido:
+          <input
+            class="control"
+            type="text"
+            name="apellido"
+            id="apellido"
+            maxlength="150"
+            placeholder="Apellido" />
+        </label>
 
-				<tr>
-					<td>
-						<label for="email">Email:</label>
-					</td>
-					<td>
-						<input class="control" type="text" name="email" id="email" maxlength="150" placeholder="Email">
-					</td>
-				</tr>
+        <label for="email">
+          Email:
+          <input
+            class="control"
+            type="text"
+            name="email"
+            id="email"
+            maxlength="150"
+            placeholder="Email" />
+        </label>
 
-				<tr>
-					<td colspan="2">
-						<button class="control" id="btnGuardar">Guardar</button>
-					</td>
-				</tr>
-				
-      </table>
+        <div><button class="control" id="btnGuardar">Guardar</button></div>
+      </fieldset>
     </form>
 
     <script src="./assets/js/main.js"></script>
